--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,36 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  mysql:
-    image: mysql:8
-    container_name: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: test
-    volumes:
-      - mysql-data:/var/lib/mysql
-      - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql
+  app:
+    build: ./app
     ports:
-      - "9306:9306"
-
-  backend:
-    build: ./backend
-    container_name: backend
-    restart: always
-    environment:
-      DB_HOST: mysql
-      DB_USER: root
-      DB_PASSWORD: root
-      DB_NAME: appdb
+      - "9200:80"
     depends_on:
-      - mysql
+      - api
+
+  api:
+    build: ./api
     ports:
       - "9090:9090"
+    environment:
+      DB_HOST: mysql
+      DB_PORT: 9306
+      DB_USER: root
+      DB_PASSWORD: 
+      DB_NAME: test
+    depends_on:
+      - mysql
 
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    restart: always
+  mysql:
+    image: mysql:8.0
+    environment:
+      MYSQL_ROOT_PASSWORD: 
+      MYSQL_DATABASE: test
     ports:
-      - "80:80"
+      - "9306:3306"
+    volumes:
+      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
+      - mysql_data:/var/lib/mysql
 
 volumes:
-  mysql-data:
+  mysql_data:
