--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,12 @@
+FROM node:22-alpine as build
+WORKDIR /app
+COPY package*.json ./
+RUN npm install
+COPY . .
+RUN npm run build -- --configuration production
+
 FROM nginx:alpine
-
-COPY ./dist/angular /usr/share/nginx/html
+COPY --from=build /app/dist/angular /usr/share/nginx/html
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
