--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -1,9 +1,28 @@
 server {
     listen 80;
 
+    # App Angular en /app1
+    location /app1/ {
+        proxy_pass http://localhost:9200/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/app1/(.*)$ /$1 break;
+    }
+
+    # Backend en /api
+    location /api/ {
+        proxy_pass http://localhost:9090/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/api/(.*)$ /$1 break;
+    }
+
+    # Raíz o default (opcional)
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        return 200 "Servidor nginx proxy inverso funcionando\n";
     }
 }
