--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,11 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
+
 RUN npm run build
 
 EXPOSE 9090
-CMD ["node", "dist/server.js"]
+
+CMD ["/wait-for-it.sh", "mysql:9306", "--", "node", "dist/server.js"]
